--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-file-uploader": "^1.0.0",
     "tailwindcss": "3.3.3",
+    "uuid": "^9.0.1",
     "yup": "^1.2.0"
   }
 }
